# agent-sdk

./: .dockerignore  .gitignore  AGENTS.md  API_DESIGN_PLAN.md  CLAUDE.md  CLAUDE_CODE_AGENT.md  FACTS.txt  MANIFEST.in  Makefile  PLUGIN_ARCHITECTURE_PLAN.md  PROXY_SIMPLIFICATION.md  README.md  RESTRUCTURING_COMPLETE.md  RUNTIME_BUILD_REVIEW.md  SANDBOXED_AGENT_SERVER.md  SIMPLIFIED_API_DESIGN.md  VARIANT_ANALYSIS.md  VISUALIZER_IMPROVEMENTS.md  WORKSPACE_REFACTOR_STATUS.md  agent-sdk.workspace.code-workspace  demo_plugin_architecture.py  log.txt  native-responses.md  plan.md  prd.md  previous.md  pydoc-markdown.yml  pyproject.toml  pyrightconfig.json  responses_spec.md  task.md  todo_reasoning.md
.beads/: agent-sdk.db
.devcontainer/: devcontainer.json  setup.sh
.github/prompts/: update-docstring.md  update-documentation.md
.github/workflows/: acp-server.yml  check-and-gen-docs.yml  claude-code-agent-tests.yml  deploy-docs.yml  docs-md.yml  examples-record.yml  examples-replay.yml  integration-runner.yml  oh-docstring.yml  oh-update-documentation.yml.back  pr-review-by-openhands.yml  precommit.yml  server.yml  test-examples.yml  tests.yml  (+2 more)
.tmp/: reasoning_content_example.py
architecture/: agent.md  conversation.md  llm.md  overview.md  tool.md
docs/: PRD_responses_agent_llm.md  README.md  architecture.md  examples.md  getting-started.md  llm-model-info-and-caps.md  llm-refactor.md  llm.md  llm_profiles.md  mcp.md  responses_spec.md  tools-system.md
examples/: 01_hello_world.py  02_custom_tools.py  03_activate_microagent.py  03_conversation_dashboard.py  04_confirmation_mode_example.py  04_llm_turn_dashboard.py  05_use_llm_registry.py  06_interactive_terminal_w_reasoning.py  07_mcp_integration.py  08_mcp_with_oauth.py  09_pause_example.py  10_persistence.py  10_reasoning_debug.py  11_async.py  11_call_agents_through_api.py  11_call_openhands_remotely.py  12_anthropic_thinking_litellm.py  12_api_via_docker.py  12_custom_secrets.py  12_debug_responses_reasoning.py  13_get_llm_metrics.py  14_context_condenser.py  14_datadog_debugging.py  15_browser_use.py  16_create_agent_from_spec.py  16_llm_security_analyzer.py  17_color_themes.py  17_image_input.py  17_llm_security_analyzer.py  17_message_queue.py  18_claude_code_agent.README.md  18_claude_code_agent.py  18_send_message_while_processing.py  18_stuck_detector.py  19_hello_world_with_remote_convo.py  19_llm_routing.py  20_automated_todo_management.py  20_stuck_detector.py  22_hello_world_with_agent_server.py  22_prompt_cache_probe.py  (+31 more)
examples_local/: 10_reasoning_debug.py  12_debug_responses_reasoning_local.py  feedback.md
openhands/: __init__.py
openhands-agent-server/: pyproject.toml
openhands-sdk/: pyproject.toml
openhands-tools/: pyproject.toml
openhands-workspace/: pyproject.toml
openhands/runtime_server/: README.md  __init__.py  __main__.py  api.py  client.py  docker_service.py  models.py  pyproject.toml
openhands/server/: BUILD.md  Makefile  README.md  __init__.py  app.py  auth.py  build.py  build.sh  cli.py  client_gen_config.yaml  export_openapi.py  main.py  openapi.json  openhands-server.spec  pyproject.toml  state.py
openhands/server/middleware/: __init__.py  auth.py
openhands/server/models/: __init__.py  requests.py  responses.py
openhands/server/routers/: __init__.py  conversations.py  server.py
openhands/server/runtime/: __init__.py  base.py  build.py  logs.py  models.py
openhands/server/runtime/impl/: docker.py  remote.py
openhands/server/services/: __init__.py  conversation_manager.py
openhands/server/utils/: __init__.py  openapi_generator.py
openhands/tools/: __init__.py  pyproject.toml
openhands/tools/browser_use/: __init__.py  definition.py  impl.py
openhands/tools/delegation/: __init__.py  definition.py  impl.py
openhands/tools/execute_bash/: __init__.py  constants.py  definition.py  definition_old.py  impl.py  metadata.py
openhands/tools/execute_bash/terminal/: __init__.py  factory.py  interface.py  subprocess_terminal.py  terminal_session.py  tmux_terminal.py  types.py
openhands/tools/execute_bash/utils/: command.py
openhands/tools/file_editor/: definition.py
openhands/tools/file_viewer/: __init__.py  definition.py  impl.py
openhands/tools/glob/: __init__.py  impl.py
openhands/tools/glob_tool/: __init__.py  definition.py  impl.py
openhands/tools/plan_writer/: __init__.py  definition.py  impl.py
openhands/tools/planning/: create_planning_conversation_tool.py  write_plan_tool.py
openhands/tools/preset/: __init__.py  default.py  planning.py  tom.py  worker.py
openhands/tools/spawn_planning_child/: __init__.py  tool.py
openhands/tools/str_replace_editor/: __init__.py  definition.py  editor.py  exceptions.py  impl.py
openhands/tools/str_replace_editor/utils/: __init__.py  config.py  constants.py  diff.py  encoding.py  file_cache.py  history.py  shell.py
openhands/tools/task_tracker/: __init__.py  definition.py
openhands/tools/tom_consult/: action.py  observation.py  tool.py
openhands/tools/utils/: ripgrep.py
openhands/workspace/: __init__.py  base.py  docker.py  hash_utils.py  local.py  models.py  pyproject.toml  remote.py  workspace.py
openhands/workspace/builder/: __init__.py  build_config.py  docker.py
openhands/workspace/docker/: Dockerfile  build_agent_server.py  builder.py  runtime_build.py  workspace.py
openhands/workspace/kubernetes/: __init__.py  constants.py  deployment.py  ingress.py  kubernetes.py  metadata.py  pvc.py  resources.py  service.py  service_account.py  utils.py
openhands/workspace/remote/: __init__.py  api.py  base.py  docker.py
openhands/workspace/remote_api/: __init__.py  api.py  builder.py
openhands/workspace/remote_api/utils/: http_session.py  request.py  shutdown_listener.py  tenacity_stop.py
openhands/workspace/utils/: exception.py  hash_utils.py  local.py  logger.py
openhands/workspace/utils/builder/: __init__.py  base.py  build_config.py  docker.py
scripts/: conversation_dashboard.py  conversation_viewer.py  e2e_responses_reasoning.py
tests/: conftest.py  test_package_distribution.py
(+982 files in other folders)
