[project]
name = "openhands-runtime-server"
version = "0.1.0"
description = "OpenHands Runtime Server - REST interface for Docker runtime lifecycle"

requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<0.29",
  "docker>=7.1,<8",
  "fastapi>=0.104",
  "pydantic>=2",
  "uvicorn>=0.31.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*" ]

[project.scripts]
runtime-server = "openhands.runtime_server.__main__:main"
