[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhands-server"
version = "0.1.0"
description = "OpenHands Agent SDK REST API Server"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "OpenHands Team", email = "openhands@all-hands.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
sdk = [
    "openhands-sdk",  # Optional SDK integration
]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.25.0",  # For FastAPI testing
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
]

[project.scripts]
openhands-server = "openhands.server.cli:main"

[project.urls]
Homepage = "https://github.com/All-Hands-AI/agent-sdk"
Repository = "https://github.com/All-Hands-AI/agent-sdk"
Issues = "https://github.com/All-Hands-AI/agent-sdk/issues"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["openhands"]

# Pyright configuration
[tool.pyright]
include = ["openhands/server"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["openhands/server"]

[tool.hatch.build.targets.sdist]
include = [
    "openhands/server/**/*.py",
    "README.md",
    "pyproject.toml",
]