[project]
name = "openhands-server"
version = "1.0.0"
description = "OpenHands Server - REST API server for AI agent conversations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "openhands-tools",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*"]

[project.scripts]
openhands-server = "openhands.server.cli:main"