[project]
name = "openhands-tools"
version = "1.0.0a1"
description = "OpenHands Tools - Runtime tools for AI agents"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "bashlex>=0.18",
    "binaryornot>=0.4.4",
    "cachetools",
    "libtmux>=0.46.2",
    "pydantic>=2.11.7",
    "browser-use>=0.7.7",
    "func-timeout>=4.3.5",
]

[build-system]
requires = [
    "setuptools>=61.0", 
    "wheel", 
    "pydantic>=2.11.7", 
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "fastmcp>=2.11.3",
    "litellm>=v1.77.7.dev9",
    "python-frontmatter>=1.1.0",
    "python-json-logger>=3.3.0",
    "tenacity>=9.1.2",
    "websockets>=12"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
