[project]
name = "openhands-workspace"
version = "1.0.0"
description = "OpenHands Workspace - Complete workspace implementations with Docker and build support"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "pydantic>=2.11.7",
    "docker>=7.1.0",
    "dirhash>=0.5.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../.."]
include = ["openhands*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]